# SCS

./: .gitignore  LICENSE  README.md  REFACTORING_REPORT.md  check.py  pyproject.toml  run.py  test_basic_components.py
configs/: babi.yaml  babi0.yaml  babi1.yaml  babi2.yaml  babi3.yaml  babi4.yaml  babi_1.yaml  babi_10.yaml  babi_100.yaml  babi_11.yaml  babi_12.yaml  babi_14.yaml  babi_15.yaml  babi_16.yaml  babi_2.yaml  babi_20.yaml  babi_25.yaml  babi_3.yaml  babi_30.yaml  babi_4.yaml  babi_5.yaml  babi_50.yaml  babi_6.yaml  babi_60.yaml  babi_7.yaml  babi_70.yaml  babi_8.yaml  babi_80.yaml  babi_85.yaml  babi_9.yaml  babi_90.yaml  babi_95.yaml  babi_a.yaml  babi_b.yaml  babi_c.yaml  babi_d.yaml  babi_e.yaml  babi_f.yaml  babione.yaml  base_model.yaml  (+45 more)
docs/: GLUE_baselines.md  architecture_spec.md  proposal.md
examples/: basic_usage.py  refactored_usage.py
experiments/clutrr_run_01/: experiment_summary.txt
scripts/: run_ablation.sh  run_experiment.sh  setup.sh
src/scs/: __init__.py  cli.py  common.py  config.py  test.py  utils.py
src/scs/architecture/: __init__.py  io.py  io_node.py  module.py  node.py  node_refactored.py  prev_io.py  system.py  test.py  timing.py  transformer.py
src/scs/config/: __init__.py  builder.py  manager.py  schemas.py  training_schemas.py
src/scs/data/: __init__.py  bert_dataset.py  dataloader.py  dataset.py  mlm_dataset.py  processor.py  tokenizer.py
src/scs/evaluation/: __init__.py  analyzer.py  metrics.py  visualizer.py
src/scs/training/: __init__.py  loss.py  metric.py  optimizer.py  trainer.py
src/scs/utils/: __init__.py  experiment_utils.py  file_utils.py  general_utils.py  model_builder.py  tensorboad_logger.py
utils/: general_utils.py  logging_utils.py
