# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scs-research" # 프로젝트 이름 변경
version = "0.1.0"
description = "Spike-Based Cognitive System: A Bio-Inspired Dynamic Computing Architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "YeoJoon", email = "joyyoj1@naver.com"}
]
keywords = ["spiking neural networks", "cognitive architecture", "semantic reasoning", "neuromorphic computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML frameworks
    "torch>=1.12.0",
    "numpy>=1.21.0",
    
    # NLP and data processing
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    
    # Configuration and experiment management
    "PyYAML>=6.0",
    "wandb", # wandb 버전은 보통 최신을 따름
    
    # Utilities
    "tqdm>=4.64.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "pre-commit",
    "mypy",
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

analysis = [
    "matplotlib",
    "seaborn",
    "plotly",
    "scikit-learn",
    "networkx",
    "umap-learn",
]

[project.urls]
Repository = "https://github.com/YeoJune/SCS"

[project.scripts]
scs = "scs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# configs/는 패키지 데이터가 아니므로 이 섹션은 비워둠

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true # 단순화를 위해 외부 라이브러리 타입 에러는 무시